[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/graphisme/histoire/FLYNN/Pitchoune.png" type="Texture" id=1]
[ext_resource path="res://assets/graphisme/histoire/Fond vaisseau.png" type="Texture" id=2]
[ext_resource path="res://src/UI/ZoneDialog.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/Fin1erNiveau.gd" type="Script" id=4]

[node name="Fin1erNiveau" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fond" type="TextureRect" parent="."]
margin_top = -1.7818
margin_right = 1917.0
margin_bottom = 1082.22
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 900, 692 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="ZoneDialog" parent="." instance=ExtResource( 3 )]

[node name="changementFond" type="Timer" parent="."]
wait_time = 0.5
[connection signal="timeout" from="changementFond" to="." method="_on_changementFond_timeout"]
